# CMakeModules

./: .gitignore  CMakeLists.txt  FetchHyloDependency.cmake  FindBigInt.cmake  FindDurian.cmake  FindGenerateSwiftXCTestMain.cmake  FindHyloLLVM.cmake  FindSwiftAlgorithms.cmake  FindSwiftArgumentParser.cmake  FindSwiftCollections.cmake  FindSwiftNumerics.cmake  FindSwiftSyntax.cmake  FindSwiftXCTest.cmake  FindSwifty-LLVM.cmake  HyloUtilities.cmake  Package.resolved  Package.swift  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: build-and-test.yml
.github/workflows/: build-and-test.yml
Sources/: CMakeLists.txt  GenerateXCTestMain.swift  XCTestDiscovery.swift
Tests/: CMakeLists.txt  Tests.swift  XCTestImporter.swift
cmake/: SwiftXCTestCTestBridge.cmake  TopLevelDefaults.cmake
cmake/modules/: FindSwiftXCTest.cmake  SwiftCMakeXCTesting.cmake  SwiftCMakeXCTesting_FetchDependencies.cmake
patches/: swift-argument-parser.patch  swift-collections.patch  swift-numerics.patch
